--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,10 +6,20 @@
 
 body {
   font-family: 'Montserrat';
+  min-height: 100vh;
+  color: rgba(0,0,0,0.7);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 header {
   text-align: center;
+}
+
+.logo {
+  width: 60%;
+  max-width: 250px;
 }
 
 ul {
@@ -17,4 +27,64 @@ ul {
   justify-content: center;
   align-items: center;
   list-style-type: none;
+  width: 100%;
 }
+
+.primary-nav {
+  width: 100%;
+  height: 70px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 1;
+}
+
+.primary-nav__link {
+  color: black;
+  text-decoration: none;
+}
+
+.primary-nav__link:not(last-child) {
+  margin-right: 10px;
+}
+
+.primary-nav__link--active {
+  text-decoration: underline;
+  text-underline-offset: 3px;
+  text-decoration-thickness: 2px;
+  text-decoration-color: #51c15c;
+}
+
+.secondary-nav {
+  margin-top: 30px;
+}
+
+.secondary-nav__link {
+  padding: 8px 16px;
+  background-color: #51c15c;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 0.3em;
+}
+
+.secondary-nav__link:hover {
+  background-color: #3aa244;
+}
+
+.secondary-nav__link:not(last-child) {
+  margin-right: 10px;
+}
+
+header h1 {
+  font-size: 24px;
+  margin-top: 30px;
+}
+
+
+
+
+
