--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,10 +11,14 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  animation: fadeIn 0.5s;
 }
 
 header {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .logo {
@@ -82,6 +86,15 @@ ul {
 header h1 {
   font-size: 24px;
   margin-top: 30px;
+}
+
+@keyframes fadeIn {
+  0% {
+      opacity: 0;
+  }
+  100% {
+      opacity: 1;
+   }
 }
 
 
