--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,15 +7,14 @@
 body {
   font-family: 'Montserrat';
   min-height: 100vh;
-  color: rgba(0,0,0,0.7);
   display: flex;
   flex-direction: column;
   justify-content: center;
+  text-align: center;
   animation: fadeIn 0.5s;
 }
 
 header {
-  text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -24,6 +23,12 @@ header {
 .logo {
   width: 60%;
   max-width: 250px;
+}
+
+.code-snippet {
+  width: 100%;
+  max-width: 700px;
+  margin: 10px auto 0 auto;
 }
 
 ul {
@@ -84,8 +89,11 @@ ul {
 }
 
 header h1 {
-  font-size: 24px;
   margin-top: 30px;
+}
+
+h1 {
+  font-size: 24px;
 }
 
 @keyframes fadeIn {
