--- a/styles/global.css
+++ b/styles/global.css
@@ -9,35 +9,13 @@
 
 body {
   min-height: 100vh;
-  text-align: center;
   animation: fadeIn 0.1s;
-}
-
-header {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 }
 
 .code-snippet {
   width: 100%;
   max-width: 700px;
   margin: 10px auto 0 auto;
-}
-
-.flex-row-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  list-style-type: none;
-  width: 100%;
-}
-
-.flex-column-center {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .primary-nav {
@@ -79,11 +57,31 @@ h1 {
   color: #fff;
   border-radius: 0.3em;
   border: none;
+  outline: none;
 }
 
-.button:hover {
+.button:hover, .button:focus {
   background-color: #3aa244;
   cursor: pointer;
+}
+
+.flex-row-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style-type: none;
+  width: 100%;
+}
+
+.flex-column-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  text-align: center;
 }
 
 @keyframes fadeIn {
