-html cleanup 🧹 -styling -comments 📝

--- a/styles/global.css
+++ b/styles/global.css
@@ -4,11 +4,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Montserrat';
 }
 
 body {
   min-height: 100vh;
+  font-family: 'Montserrat';
   animation: fadeIn 0.1s;
 }
 
@@ -49,6 +49,14 @@ body {
 
 h1 {
   font-size: 24px;
+}
+
+input, button {
+  font-family: inherit;
+}
+
+code {
+  font-size: 16px;
 }
 
 .button {
