--- a/styles/q1.css
+++ b/styles/q1.css
@@ -24,9 +24,9 @@ h2 {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;  
 }
 
-#todo-list, #done-list {
+/* #todo-list {
   min-height: 100px;
-}
+} */
 
 input {
   width: 100%;
