--- a/styles/global.css
+++ b/styles/global.css
@@ -1,5 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
+/* shared colors */
+:root {
+  --white: #fff;
+  --green-100: #51c15c;
+  --green-200: #3aa244;
+}
+
+/* fade in animation shared between all pages */
+@keyframes fadeIn {
+  0% {
+      opacity: 0;
+  }
+  100% {
+      opacity: 1;
+   }
+}
+
+/* reset  */
 * {
   margin: 0;
   padding: 0;
@@ -12,16 +30,38 @@ body {
   animation: fadeIn 0.1s;
 }
 
-.code-snippet {
-  width: 100%;
-  max-width: 700px;
-  margin: 10px auto 0 auto;
+h1 { 
+  font-size: 24px; 
+  text-align: center; 
 }
 
+input, button { font-family: inherit; }
+
+code { font-size: 16px; }
+
+.code-question {  
+  max-width: 700px;
+  margin: 0 auto;
+  padding: 130px 20px 65px 20px;
+}
+
+.code-snippet {
+  width: 100%;
+  margin: 20px auto 0 auto;
+  border-radius: 0.3em;
+}
+
+.divider {
+  height: 3px;
+  background-color: var(--green-100);
+  margin: 20px auto;
+}
+
+/* shared nav bar */
 .primary-nav {
   width: 100%;
   height: 70px;
-  background: #fff;
+  background: var(--white);
   display: flex;
   justify-content: center;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
@@ -29,6 +69,7 @@ body {
   top: 0;
   right: 0;
   z-index: 1;
+  margin-bottom: 70px;
 }
 
 .primary-nav__link {
@@ -44,24 +85,14 @@ body {
   text-decoration: underline;
   text-underline-offset: 3px;
   text-decoration-thickness: 2px;
-  text-decoration-color: #51c15c;
+  text-decoration-color: var(--green-100);
 }
 
-h1 {
-  font-size: 24px;
-}
 
-input, button {
-  font-family: inherit;
-}
-
-code {
-  font-size: 16px;
-}
 
 .button {
   padding: 8px 16px;
-  background-color: #51c15c;
+  background-color: var(--green-100);
   color: #fff;
   border-radius: 0.3em;
   border: none;
@@ -69,7 +100,7 @@ code {
 }
 
 .button:hover, .button:focus {
-  background-color: #3aa244;
+  background-color: var(--green-200);
   cursor: pointer;
 }
 
@@ -86,19 +117,6 @@ code {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-h1 {
-  text-align: center;
-}
-
-@keyframes fadeIn {
-  0% {
-      opacity: 0;
-  }
-  100% {
-      opacity: 1;
-   }
 }
 
 
