--- a/styles/q1.css
+++ b/styles/q1.css
@@ -4,7 +4,7 @@
   margin-top: 20px;
 }
 
-input {
+#todo-add-input {
   width: 100%;
   padding: 10px;
   border: 1px solid var(--green-100);
@@ -13,7 +13,7 @@ input {
   outline: none;
 }
 
-input:focus {
+#todo-add-input:focus {
   background-color: rgba(81, 193, 92, 0.1);
   border-color: var(--green-200);
 }
