--- a/styles/index.css
+++ b/styles/index.css
@@ -1,24 +1,14 @@
-header {
-  text-align: center;
-}
+header { text-align: center; }
 
-h1 {
-  margin-top: 30px;
-}
+h1 { margin-top: 30px; }
 
 .logo {
   width: 60%;
   max-width: 250px;
 }
 
-.secondary-nav {
-  margin-top: 30px;
-}
+.secondary-nav { margin-top: 30px; }
 
-.secondary-nav__link {
-  text-decoration: none;
-}
+.secondary-nav__link { text-decoration: none; }
 
-.secondary-nav__link:not(last-child) {
-  margin-right: 10px;
-}
+.secondary-nav__link:not(last-child) { margin-right: 10px; }
